--- a/src/ui.css
+++ b/src/ui.css
@@ -1,4 +1,55 @@
 #code_interface {
-    width:100%;
+    width: 100%;
     white-space: pre-wrap;
+}
+
+@font-face {
+    font-family: "AreaNormal";
+    /*Can be any text*/
+    src: url("./fonts/area.otf") format("opentype");
+}
+
+
+* {
+    font-family: sans-serif;
+    box-sizing: border-box;
+    background-color: #F9F6FF;
+}
+h4 {
+    font-size: 12px;
+    color: gray;
+}
+
+.title {
+    font-size: x-large;
+    font-weight: bolder;
+    margin: 0%;
+    padding: 0%;
+}
+
+.button {
+    border-radius: 16.0px;
+    border-color:transparent;
+    padding: 8px;
+    margin: 15px;
+    background-color: black;
+    color: aliceblue;
+}
+
+.codeArea {
+    background-color: transparent;
+    border-radius: 15px;
+    height:400px;
+    width: 100%;
+    font-family: monospace;
+    color: black;
+}
+
+.input {
+    background-color: transparent;
+    border-radius: 10px;
+    border-width: 1px;
+    height:30px;
+    font-family: monospace;
+    color: black;
 }
