--- a/src/ui.css
+++ b/src/ui.css
@@ -53,3 +53,18 @@ h4 {
     font-family: monospace;
     color: black;
 }
+
+.option
+ {
+    background-color: transparent;
+    padding: 10px;
+    margin: 10px;
+}
+
+.select
+ {
+    background-color: transparent;
+    padding: 8px;
+    margin: 10px;
+    border-radius: 10px;
+}
